--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,33 +1,148 @@
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Oxanium', cursive;
+body {
+    font-family: "oxanium", cursive;
+    background-color: black;
+    color: #ffffff;
 }
 
-body{
-    text-align: center;
-    background: linear-gradient(to bottom,#A18357,#614F34);
-    min-height: 100vh;
-}
-
-main{
-    display: inline-block;
-    margin-top: 2%;
-    padding:  15px;
-}
-
-.map{
+body::before {
+    content: "";
+    background-image: url(../image/MAPA-WORLD.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     width: 100%;
-    max-width: 3000px;
+    height: 100%;
+    position: absolute;
+    z-index: -1;
+    opacity: 0.15;
 }
 
-.buttons{
-    position: absolute;
-    bottom: 10%;
-    left: 50%;
-    width: 65%;
-    background-color: red;
-    transform: translate(-57%, 0);
+.cabecalho {
+    display: flex;
+    justify-content: center;
+    height: 170px;
+    margin: 11px;
+}
+
+.selecao-de-personagens {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    min-height: calc(100vh - 100px);
+    justify-content: center;
+}
+
+.selecao-de-personagens .lista-de-personagens {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
+}
+
+.selecao-de-personagens .personagens {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 585px;
+    gap: 25px;
+}
+
+.selecao-de-personagens .personagens .titulo {
+    font-size: 20px;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    border-bottom: 2px solid #ac1111;
+    width: 100%;
+    text-align: center;
+}
+
+.selecao-de-personagens .personagem {
+    width: 123px;
+    filter: grayscale(100%);
+}
+
+
+
+.personagem-selecionado {
+    text-align: center;
+    max-height: 540px;
+}
+
+.personagem-selecionado .personagem-selecionado {
+    width: 430px;
+    height: 430px;
+}
+
+.personagem-selecionado .nome-personagem {
+    font-size: 24px;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    border-bottom: 2px solid #ac1111;
+    width: 100%;
+    text-align: center;
+}
+
+.personagem-selecionado .descricao-personagem {
+    font-size: 16px;
+    line-height: 22px;
+    text-align: justify;
+    margin-top: 20px;
+    width: 585px;
+}
+
+.personagem:hover img {
+    transform: scale(1.1);
+    filter: none;
+}
+
+.personagem {
+    width: 124px;
+    height: 190px;
+    overflow: hidden;
+    border-radius: 8px;
+}
+
+.lista-de-personagens .personagem.clicado:hover {
+    filter: brightness(1.2);
+}
+
+.lista-de-personagens .personagem.selecionado.clicado {
+    filter: brightness(1);
+    animation: pulse 1s infinite;
+}
+
+@keyframes pulse {
+    0% {
+        box-shadow: 0px 0px 24px 5px #aa0000;
+    }
+
+    30% {
+        box-shadow: 0px 0px 24px 5px #aa0000b8, 0px 0px 30px 10px #bd0606d3;
+    }
+
+    80% {
+        box-shadow: 0px 0px 24px 5px #aa0000d5;
+    }
+}
+
+.fade-in {
+    opacity: 1;
+    transition: opacity 0.3s;
+}
+
+.fade-out {
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #2c2c31;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #9e9ea0;
 }
